--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -15,7 +15,8 @@
     "mongoose": "^5.9.27",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.14",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "socket.io": "^3.0.3"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
