--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "^3.4.3",
-    "react-share": "^4.3.0"
+    "react-share": "^4.3.0",
+    "socket.io": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
