--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "instagram_clone",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.18.0"
+  },
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
