--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   },
   "scripts": {
     "client": "cd client && npm start",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm run build"
+    "server": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
