--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "scripts": {
     "client": "cd client && npm start",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "build": "cd client && npm run build"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
