--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run client/build"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
